objects/CSAPEN_Other_Technology_Landscape__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan_New__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Other Technology Landscape</relationshipLabel>
        <relationshipName>Other_Technology_Landscape</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active_Cisco_Partner__c</fullName>
        <description>Yes/No picklist to identify if the Customer Supplier is an active Cisco partner.</description>
        <label>Active Cisco Partner?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cisco_to_Customer_Alignment__c</fullName>
        <description>Picklist to identify how well Cisco and the customer align for the specific Technology.</description>
        <label>Cisco to Customer Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Low</fullName>
                </value>
                <value>
                    <fullName>2 - Medium Low</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>4 - Medium High</fullName>
                </value>
                <value>
                    <fullName>5 - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Supplier__c</fullName>
        <description>Picklist of Technology supplier’s.</description>
        <label>Customer Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUTOMATIC DATA PROCESSING</fullName>
                </value>
                <value>
                    <fullName>BENQ</fullName>
                </value>
                <value>
                    <fullName>BMC Software</fullName>
                </value>
                <value>
                    <fullName>BRIGHTPOINT</fullName>
                </value>
                <value>
                    <fullName>CANON</fullName>
                </value>
                <value>
                    <fullName>CASIO COMPUTER</fullName>
                </value>
                <value>
                    <fullName>CDW</fullName>
                </value>
                <value>
                    <fullName>CHI MEI OPTOELECTRONICS</fullName>
                </value>
                <value>
                    <fullName>CHINA MOBILE (HONG KONG)</fullName>
                </value>
                <value>
                    <fullName>CHINA TELECOM</fullName>
                </value>
                <value>
                    <fullName>CHINA UNICOM</fullName>
                </value>
                <value>
                    <fullName>COGNIZANT TECH. SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>COMPAL ELECTRONIC</fullName>
                </value>
                <value>
                    <fullName>COMPUTER SCIENCES</fullName>
                </value>
                <value>
                    <fullName>DELL</fullName>
                </value>
                <value>
                    <fullName>D-Link</fullName>
                </value>
                <value>
                    <fullName>ELECTRONIC ARTS</fullName>
                </value>
                <value>
                    <fullName>Epson</fullName>
                </value>
                <value>
                    <fullName>FUJITSU</fullName>
                </value>
                <value>
                    <fullName>HEWLETT-PACKARD</fullName>
                </value>
                <value>
                    <fullName>HON HAI PRECISION IND</fullName>
                </value>
                <value>
                    <fullName>Hyperion Solutions Corp.</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>INFOSYS TECHNOLOGIES</fullName>
                </value>
                <value>
                    <fullName>INTEL</fullName>
                </value>
                <value>
                    <fullName>JABIL CIRCUIT</fullName>
                </value>
                <value>
                    <fullName>Juniper</fullName>
                </value>
                <value>
                    <fullName>KDDI</fullName>
                </value>
                <value>
                    <fullName>Kronos</fullName>
                </value>
                <value>
                    <fullName>Kronos Incorporated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_to_Supplier_Alignment__c</fullName>
        <description>Picklist to identify how well the customer and the Customer Supplier align for a specific Technology.</description>
        <label>Customer to Supplier Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Low</fullName>
                </value>
                <value>
                    <fullName>2 - Medium Low</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>4 - Medium High</fullName>
                </value>
                <value>
                    <fullName>5 - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Source_Name__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Data Source Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Deployment No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Alignment_Cisco_to_Supplier__c</fullName>
        <description>Picklist to identify how well Cisco’s messaging and the Customer Supplier’s messaging align.</description>
        <label>Message Alignment - Cisco to Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Low</fullName>
                </value>
                <value>
                    <fullName>2 - Medium Low</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>4 - Medium High</fullName>
                </value>
                <value>
                    <fullName>5 - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mission_Critical_to_Cisco__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to identify if this landscape is Mission Critical to Cisco.</description>
        <label>Mission Critical to Cisco</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <description>Text field used to capture any other relevant information that will help better understand the Other Technology Landscape.</description>
        <label>Other Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_URL__c</fullName>
        <description>URL field to link to other relevant information.</description>
        <label>Other URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SiteMapIdentifier__c</fullName>
        <description>Determines how the record displays on the site map</description>
        <formula>Name &amp; "-" &amp; CASE(Technology__c, "Archiving", "Archiving", "Building Systems Management", "Building Systems Management", "Cabling", "Cabling", "CRM", "CRM", "Desktop H/W", "Desktop H/W", "Desktop S/W", "Desktop S/W", "Document Library", "Document Library", "Email", "Email", "PS System", "POS System", "Printing Services", "Printing Services", "Publishing", "Publishing", "Servers", "Servers", "Other", "Other", "--None--","NOT DEFINED","")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SiteMapIdentifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Plan_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Account Plan Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Other_Tech_Land_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Other Tech Land Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact__c</fullName>
        <description>The contact name for the Customer Supplier.</description>
        <label>Supplier Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_to_Cisco_Alignment__c</fullName>
        <description>Picklist to identify how well the Customer Supplier and Cisco align for the Technology.</description>
        <label>Supplier to Cisco Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Low</fullName>
                </value>
                <value>
                    <fullName>2 - Medium Low</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>4 - Medium High</fullName>
                </value>
                <value>
                    <fullName>5 - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Cisco_Partner__c</fullName>
        <description>Dependent picklist field, editable if Active Cisco Partner? is set to No.  This picklist is used to identify if the Customer Supplier is targeted to be a Cisco partner.</description>
        <label>Target Cisco Partner?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Active_Cisco_Partner__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>A specific Technology that the Other Technology Landscape represents.</description>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Archiving</fullName>
                </value>
                <value>
                    <fullName>Building Systems Management</fullName>
                </value>
                <value>
                    <fullName>Cabling</fullName>
                </value>
                <value>
                    <fullName>Collaborative Tool</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Desktop H/W</fullName>
                </value>
                <value>
                    <fullName>Desktop S/W</fullName>
                </value>
                <value>
                    <fullName>Document Library</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>POS System</fullName>
                </value>
                <value>
                    <fullName>Printing Services</fullName>
                </value>
                <value>
                    <fullName>Publishing</fullName>
                </value>
                <value>
                    <fullName>Servers</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Other Technology Landscape</description>
    <label>Other Technology Landscape</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Landscape Component</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Technology Landscape</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>